--- a/index.html
+++ b/index.html
@@ -75,14 +75,15 @@
   }
 
   #dashboard {
-    /* We'll set rows and columns dynamically with JS */
     margin: 0 auto;
     box-sizing: border-box;
     flex: 1;
     display: grid;
-    place-items: center;
+    /* Removed place-items: center; and replaced with stretch */
+    justify-items: stretch; 
+    align-items: stretch;
     position: relative;
-    touch-action: none; /* needed for pointer events on iOS */
+    touch-action: none;
   }
 
   .tile {
@@ -99,6 +100,9 @@
     overflow: hidden;
     user-select: none;
     touch-action: none;
+    /* Added width and height 100% to make the tile fill the entire cell */
+    width: 100%;
+    height: 100%;
   }
 
   .tile h2 {
@@ -247,7 +251,6 @@
     outline: 2px dashed #333;
   }
 
-  /* Drag ghost styling */
   .drag-ghost {
     position: absolute;
     z-index: 1000;
