--- a/index.html
+++ b/index.html
@@ -453,65 +453,65 @@
 
     // Event Listeners
 
-    // Theme Toggle
-    themeToggleBtn.addEventListener("click", () => {
-      document.body.classList.toggle("dark-mode");
-      localStorage.setItem("dashboardTheme", document.body.classList.contains("dark-mode") ? "dark" : "light");
-    });
-
-    // Open Add Tile Modal
-    addTileButton.addEventListener("click", () => {
-      addTileOverlay.style.display = "flex";
-    });
-
-    // Close Add Tile Modal
-    closeAddTileBtn.addEventListener("click", () => {
-      addTileOverlay.style.display = "none";
-    });
-
-    // Add Tile from List
-    document.querySelectorAll(".add-tile-list li").forEach(li => {
-      li.addEventListener("click", () => {
-        const type = li.getAttribute("data-tile-type");
-        addNewTile(type);
-        addTileOverlay.style.display = "none";
-      });
-    });
-
-    // Close Configure Modal
-    closeConfigModalBtn.addEventListener("click", () => {
-      configOverlay.style.display = "none";
-      currentConfigTile = null;
-    });
-
-    // Save Configuration
-    saveConfigBtn.addEventListener("click", () => {
-      if (!currentConfigTile) return;
-      const formData = new FormData(configForm);
-      
-      for (let [key, value] of formData.entries()) {
-        if (currentConfigTile.type === "rss" && key === "limit") {
-          value = parseInt(value, 10);
-        }
-        if (currentConfigTile.type === "stock" && key === "updateInterval") {
-          value = parseInt(value, 10);
-        }
-        if (currentConfigTile.type === "weather" && key === "updateInterval") {
-          value = parseInt(value, 10);
-        }
-        currentConfigTile.config[key] = value;
-      }
-
-      saveConfig();
-      configOverlay.style.display = "none";
-      currentConfigTile = null;
-      renderTiles();
-    });
-
     // Prevent Duplicate Event Listeners
     // Ensure the script runs only once by checking a flag
     if (!window.dashboardInitialized) {
       window.dashboardInitialized = true;
+
+      // Theme Toggle
+      themeToggleBtn.addEventListener("click", () => {
+        document.body.classList.toggle("dark-mode");
+        localStorage.setItem("dashboardTheme", document.body.classList.contains("dark-mode") ? "dark" : "light");
+      });
+
+      // Open Add Tile Modal
+      addTileButton.addEventListener("click", () => {
+        addTileOverlay.style.display = "flex";
+      });
+
+      // Close Add Tile Modal
+      closeAddTileBtn.addEventListener("click", () => {
+        addTileOverlay.style.display = "none";
+      });
+
+      // Add Tile from List
+      document.querySelectorAll(".add-tile-list li").forEach(li => {
+        li.addEventListener("click", () => {
+          const type = li.getAttribute("data-tile-type");
+          addNewTile(type);
+          addTileOverlay.style.display = "none";
+        });
+      });
+
+      // Close Configure Modal
+      closeConfigModalBtn.addEventListener("click", () => {
+        configOverlay.style.display = "none";
+        currentConfigTile = null;
+      });
+
+      // Save Configuration
+      saveConfigBtn.addEventListener("click", () => {
+        if (!currentConfigTile) return;
+        const formData = new FormData(configForm);
+        
+        for (let [key, value] of formData.entries()) {
+          if (currentConfigTile.type === "rss" && key === "limit") {
+            value = parseInt(value, 10);
+          }
+          if (currentConfigTile.type === "stock" && key === "updateInterval") {
+            value = parseInt(value, 10);
+          }
+          if (currentConfigTile.type === "weather" && key === "updateInterval") {
+            value = parseInt(value, 10);
+          }
+          currentConfigTile.config[key] = value;
+        }
+
+        saveConfig();
+        configOverlay.style.display = "none";
+        currentConfigTile = null;
+        renderTiles();
+      });
 
       // Initialize the dashboard
       renderTiles();
@@ -672,7 +672,7 @@
 
       // Tile Menu Button and Menu
       tileEl.innerHTML = `
-        <button class="tile-menu-button" aria-haspopup="true" aria-expanded="false">⋮</button>
+        <button class="tile-menu-button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v"></i></button>
         <div class="tile-menu" role="menu">
           <ul>
             <li class="configure-tile" role="menuitem">Configure</li>
@@ -730,7 +730,7 @@
           if (typeof price === 'undefined') throw new Error("Incomplete crypto data");
           tileEl.innerHTML += `
             <i class="fas fa-bitcoin icon"></i>
-            <h2>${tile.config.coinId.charAt(0).toUpperCase() + tile.config.coinId.slice(1)} Price</h2>
+            <h2>${capitalizeFirstLetter(tile.config.coinId)} Price</h2>
             <p>${price} ${tile.config.currency.toUpperCase()}</p>
             <div class="updated">Updated: ${new Date().toLocaleTimeString()}</div>
           `;
@@ -831,7 +831,7 @@
 
     // Close menu when clicking outside
     document.addEventListener("click", (e) => {
-      if (currentlyOpenMenu && !currentlyOpenMenu.contains(e.target) && e.target.className !== "tile-menu-button") {
+      if (currentlyOpenMenu && !currentlyOpenMenu.contains(e.target) && e.target.closest(".tile-menu-button") === null) {
         closeAnyOpenMenu();
       }
     });
@@ -968,7 +968,7 @@
     }
 
     // Drag and Drop Functionality
-    let draggedTile = null;
+    let draggedTileElement = null;
     let dragStartX = 0;
     let dragStartY = 0;
     let ghostEl = null;
@@ -976,7 +976,7 @@
     function onPointerDown(e) {
       if (!e.target.closest('.tile') || moveMode === false) return;
       const tileEl = e.target.closest('.tile');
-      draggedTile = tileEl;
+      draggedTileElement = tileEl;
       const rect = tileEl.getBoundingClientRect();
       dragStartX = e.clientX - rect.left;
       dragStartY = e.clientY - rect.top;
@@ -984,9 +984,9 @@
     }
 
     function onPointerMove(e) {
-      if (!draggedTile) return;
+      if (!draggedTileElement) return;
       if (!ghostEl) {
-        ghostEl = draggedTile.cloneNode(true);
+        ghostEl = draggedTileElement.cloneNode(true);
         ghostEl.classList.add('drag-ghost');
         document.body.appendChild(ghostEl);
       }
@@ -995,19 +995,19 @@
     }
 
     function onPointerUp(e) {
-      if (!draggedTile) return;
-      draggedTile.releasePointerCapture(e.pointerId);
+      if (!draggedTileElement) return;
+      draggedTileElement.releasePointerCapture(e.pointerId);
       if (ghostEl) {
         const dropTile = document.elementFromPoint(e.clientX, e.clientY)?.closest('.tile');
-        if (dropTile && dropTile !== draggedTile) {
-          const tileId = draggedTile.getAttribute('data-tile-id');
+        if (dropTile && dropTile !== draggedTileElement) {
+          const tileId = draggedTileElement.getAttribute('data-tile-id');
           const targetTileId = dropTile.getAttribute('data-tile-id');
           reorderTiles(tileId, targetTileId);
         }
         document.body.removeChild(ghostEl);
         ghostEl = null;
       }
-      draggedTile = null;
+      draggedTileElement = null;
     }
 
     dashboard.addEventListener('pointerdown', onPointerDown);
@@ -1015,8 +1015,10 @@
     dashboard.addEventListener('pointerup', onPointerUp);
     dashboard.addEventListener('pointercancel', onPointerUp);
 
-    // Initial Render
-    renderTiles();
+    // Utility Function to Capitalize First Letter
+    function capitalizeFirstLetter(string) {
+      return string.charAt(0).toUpperCase() + string.slice(1);
+    }
   </script>
 
 </body>
