--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     referrerpolicy="no-referrer"
   />
   
-  <!-- Existing CSS Styles -->
+  <!-- CSS Styles -->
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -184,6 +184,7 @@
       cursor: pointer;
       color: var(--text-color);
       transition: color 0.3s;
+      z-index: 10; /* Ensure it stays above other elements */
     }
 
     .tile-menu-button:hover {
@@ -393,8 +394,8 @@
 
   <script>
     // API Keys
-    const WEATHER_API_KEY = "33dfd53a9d3d81f2922261c29bc94c06";
-    const FINNHUB_API_KEY = "ctcpibpr01qlc0uvah90ctcpibpr01qlc0uvah9g";
+    const WEATHER_API_KEY = "YOUR_WEATHER_API_KEY";
+    const FINNHUB_API_KEY = "YOUR_FINNHUB_API_KEY";
 
     // Theme Initialization
     const savedTheme = localStorage.getItem("dashboardTheme");
@@ -672,7 +673,9 @@
 
       // Tile Menu Button and Menu
       tileEl.innerHTML = `
-        <button class="tile-menu-button" aria-haspopup="true" aria-expanded="false"><i class="fas fa-ellipsis-v"></i></button>
+        <button class="tile-menu-button" aria-haspopup="true" aria-expanded="false">
+          <i class="fas fa-ellipsis-v"></i>
+        </button>
         <div class="tile-menu" role="menu">
           <ul>
             <li class="configure-tile" role="menuitem">Configure</li>
