--- a/index.html
+++ b/index.html
@@ -394,8 +394,8 @@
 
   <script>
     // API Keys
-    const WEATHER_API_KEY = "YOUR_WEATHER_API_KEY";
-    const FINNHUB_API_KEY = "YOUR_FINNHUB_API_KEY";
+    const WEATHER_API_KEY = "33dfd53a9d3d81f2922261c29bc94c06";
+    const FINNHUB_API_KEY = "ctcpibpr01qlc0uvah90ctcpibpr01qlc0uvah9g";
 
     // Theme Initialization
     const savedTheme = localStorage.getItem("dashboardTheme");
