--- a/index.html
+++ b/index.html
@@ -57,6 +57,15 @@
     </div>
   </div>
 
+  <!-- Custom Context Menu -->
+  <div class="context-menu" id="context-menu">
+    <ul>
+      <li class="configure-tile">Configure</li>
+      <li class="move-tile">Move</li>
+      <li class="remove-tile">Remove</li>
+    </ul>
+  </div>
+
   <!-- Link to External JavaScript -->
   <script src="script.js" defer></script>
 </body>
